--- a/src/app/pages/register-page/register-part2/register-part2.page.scss
+++ b/src/app/pages/register-page/register-part2/register-part2.page.scss
@@ -52,20 +52,20 @@ color: #237A73;
 }
 
 #div_btnSendcode{
-  margin-top: 200px;
+
   width: 100%;
   position: relative;
-  height: 52px;
+  height: 48px;
   background: #B2D1CE;
   border-radius: 30px;
   top: 5px;
 }
 #div_btnSubmit{
   margin-bottom: 24px;
-  margin-top: 15px;
+  margin-top: 8px;
   width: 100%;
   position: relative;
-  height: 52px;
+  height: 48px;
   background: #B2D1CE;
   border-radius: 30px;
   top: 5px;
@@ -105,4 +105,7 @@ color: #237A73;
   margin-left: auto;
   margin-right: auto;
   width: 50%;
+}
+#footer{
+  background-color: transparent;
 }
