Sua giao dien dang nhap va dang ky và button lan 2

--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -94,9 +94,9 @@
     </ion-grid>
   </form>
 </ion-content>
-<ion-footer id="footer">
+<ion-footer id="footer" class="ion-no-border">
   <div id="suggest_register">
-    <ion-text color="primary">
+    <ion-text color="black">
       Chưa có tài khoản? Đăng ký ngay bây giờ!
     </ion-text>
   </div>
