--- a/src/app/pages/register-page/register-part2/register-part2.page.html
+++ b/src/app/pages/register-page/register-part2/register-part2.page.html
@@ -1,4 +1,4 @@
-<ion-header>
+<ion-header class="ion-no-border">
   <div style="text-align: left; margin-top: 30px; margin-left: 12px">
     <img
       (click)="back()"
@@ -70,7 +70,7 @@
     </ion-grid>
   </form>
 </ion-content>
-<ion-footer id="footer">
+<ion-footer id="footer" class="ion-no-border">
   <div id="div_btnSendcode">
     <ion-button
       id="btn_Submit"
