--- a/src/app/pages/register-page/register-final/register-final.page.html
+++ b/src/app/pages/register-page/register-final/register-final.page.html
@@ -1,4 +1,4 @@
-<ion-header>
+<ion-header class="ion-no-border">
   <div style="text-align: left;margin-top:10px;margin-left:12px;position:relative;">
     <img (click)="back()" id="rh-back-btn" src="../../../assets/icon/login/back.png" alt="">
     <ion-text style="color: #237A73;margin-left:24px;font-size:18px;position:relative;bottom:5px;" color="primary">
@@ -91,7 +91,7 @@
 
   </ion-grid>
 </ion-content>
-<ion-footer id="footer">
+<ion-footer id="footer" class="ion-no-border">
   <div id="div_btnSubmit">
     <ion-button
       id="btn_Submit"
