--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -15,11 +15,7 @@
         </ion-col>
 
         <ion-col size="12" style="padding: 0">
-          <div
-            id="email_input"
-            [ngStyle]="ngStyleEmailInput"
-            class="padding-lr12px"
-          >
+          <div id="email_input" class="padding-lr12px">
             <ion-input
               type="email"
               placeholder="Email"
@@ -37,11 +33,7 @@
         </ion-col>
 
         <ion-col size="12" style="padding: 0">
-          <div
-            id="password_input"
-            [ngStyle]="ngStylePasswordInput"
-            class="padding-lr12px"
-          >
+          <div id="password_input" class="padding-lr12px">
             <ion-input
               type="password"
               placeholder="Mật khẩu"
@@ -110,6 +102,4 @@
     </ion-grid>
   </form>
 </ion-content>
-<ion-footer>
-  
-</ion-footer>
+<ion-footer> </ion-footer>
