--- a/src/app/pages/login/login.page.scss
+++ b/src/app/pages/login/login.page.scss
@@ -1,7 +1,17 @@
+ion-content {
+  // overwrite inline styles
+  --offset-bottom: auto!important;
+  --overflow: hidden;
+  overflow: auto;
+  &::-webkit-scrollbar {
+    display: none;
+  }
+  height: 100%;
+  width: 100%;
+  background-color: var(--ion-color-app-white);
+}
+
 ion-input {
-  // border-radius: 20px;
-  // background-color: #E0E9E0;
-  // text-align: left;
   height: 42px;
   font-family: "Montserrat";
   font-style: normal;
