--- a/src/app/pages/personal/personal.page.html
+++ b/src/app/pages/personal/personal.page.html
@@ -62,6 +62,9 @@
           <app-setting-item title="Giao diện" content="Dark/light mode" option="4"></app-setting-item>
         </div>
       </div>
+      <div id="ct-app-logout">
+        <app-setting-item title="Đăng Xuất" content="Đăng xuất tài khoản" option="-1"></app-setting-item>
+      </div>
     </div>
   </div>
 </ion-content>
