--- a/src/app/pages/forgot-password-page/forgot-password/forgot-password.page.html
+++ b/src/app/pages/forgot-password-page/forgot-password/forgot-password.page.html
@@ -1,105 +1,51 @@
+<ion-header>
+  <ion-toolbar>
+    <div id="tb-back" (click)="back()">
+      <img src="../../../../assets/icon/main/back.png">
+    </div>
+    <ion-title>Quên mật khẩu</ion-title>
+  </ion-toolbar>
+</ion-header>
+
 <ion-content>
-  <div style="text-align: left; margin-top: 47px; margin-left: 12px">
-    <img
-      id="rh-back-btn"
-      src="../../../assets/icon/login/back.png"
-      alt=""
-      (click)="back()"
-    />
-    <ion-text
-      style="
-        color: #237a73;
-        margin-left: 24px;
-        font-size: 23px;
-        position: relative;
-        bottom: 5px;
-      "
-      color="primary"
-    >
-      Quên mật khẩu
-    </ion-text>
-  </div>
+  <form [formGroup]="credentials">
+    <div id="app-logo">
+      <img src="../../../assets/icon/login/DLU_connect.png" alt="" class="center" />
+    </div>
+    <ion-row>
+      <ion-col size="12">
+        <ion-text id="emr-title">
+          Tài khoản bạn muốn khôi phục
+        </ion-text>
+      </ion-col>
 
-  <form [formGroup]="credentials" (submit)="submit()">
-    <ion-grid fixed style="padding-left: 12px; padding-right: 12px">
-      <div style="margin-top: 22px">
-        <img
-          src="../../../assets/icon/login/DLU_connect.png"
-          alt=""
-          class="center"
-        />
-      </div>
-
-      <ion-row>
-        <ion-col size="12" style="padding: 0"> </ion-col>
-        <ion-col size="12" style="padding: 0">
-          <div style="margin-top: 87px">
-            <ion-text style="font-size: small; color: #237a73">
-              Tài khoản bạn muốn khôi phục
-            </ion-text>
+      <ion-col size="12">
+        <div>
+          <div id="name_display">
+            <ion-input type="email" placeholder="Email" formControlName="email"></ion-input>
           </div>
-        </ion-col>
-
-        <ion-col size="12" style="padding: 0">
-          <div>
-            <div id="name_display">
-              <ion-input
-                type="email"
-                placeholder="Email"
-                formControlName="email"
-              ></ion-input>
-            </div>
-            <ion-note
-              color="danger"
-              *ngIf="(email.dirty || email.touched) && email.errors"
-            >
-              <ion-icon name="alert-circle-outline"></ion-icon>
-              Email không hợp lệ
-            </ion-note>
-          </div>
-        </ion-col>
-
-        <ion-col size="12" style="padding: 0">
-          <div style="margin-top: 10px">
-            <ion-text
-              style="
-                text-align: center;
-                font-family: 'Montserrat';
-                font-style: normal;
-                font-weight: 400;
-                font-size: 10px;
-                line-height: 15px;
-              "
-              color=""
-            >
-              <div id="contract">
-                Chúng tôi sẽ gửi mã xác nhận qua email của bạn
-              </div>
-            </ion-text>
-          </div>
-        </ion-col>
-
-        <ion-col size="12" style="padding: 0">
-          <ion-note *ngIf="isSend">
-            Email đã được gửi, vui lòng vào mail để kiểm tra và thay đổi mật
-            khẩu. Bạn có thể quay lại màn hình đăng nhập để đăng nhập
+          <ion-note class="warring-input" *ngIf="(email.dirty || email.touched) && email.errors">
+            <ion-icon name="alert-circle-outline"></ion-icon>
+            Email không hợp lệ
           </ion-note>
-        </ion-col>
-      </ion-row>
-
-      <div id="div_btnSubmit">
-        <ion-button
-          id="btn_Submit"
-          type="submit"
-          expand="block"
-          fill="clear"
-          shape="round"
-          [disabled]="!credentials.valid"
-        >
-          Gửi email
-        </ion-button>
-      </div>
-    </ion-grid>
+        </div>
+      </ion-col>
+    </ion-row>
   </form>
-  <div style="margin-left: 12px; margin-right: 12px"></div>
 </ion-content>
+<footer>
+  <div id="to-footer">
+    <span id="text-guide">
+      Chúng tôi sẽ gửi mã xác nhận qua email của bạn
+    </span>
+
+    <ion-note class="warring-input" *ngIf="isSend">
+      Email đã được gửi, vui lòng vào mail để kiểm tra và thay đổi mật
+      khẩu. Bạn có thể quay lại màn hình đăng nhập để đăng nhập
+    </ion-note>
+
+    <button (click)="submit()" id="btn_Submit" type="submit" expand="block" fill="clear" shape="round" [disabled]="!credentials.valid">
+      Gửi Email
+    </button>
+  </div>
+</footer>
