--- a/src/app/pages/forgot-password-page/forgot-password/forgot-password.page.scss
+++ b/src/app/pages/forgot-password-page/forgot-password/forgot-password.page.scss
@@ -1,104 +1,84 @@
-ion-input{
-  // border-radius: 20px;
-  // background-color: #E0E9E0;
-  // text-align: left;
-  height: 42px;
-  font-family: 'Montserrat';
-  font-style: normal;
-  font-weight: 400;
+ion-header::after {
+  background-image: none;
+}
+ion-header {
+  ion-toolbar {
+    position: relative;
+    width: 100%;
+    padding-bottom: 8px;
+    #tb-back {
+      position: absolute;
+      top: 20px;
+      left: 12px;
+      z-index: 1;
+    }
+    ion-title {
+      padding-top: 8px;
+      padding-left: 60px;
+      font-size: 20px;
+      font-family: "Montserrat Bold";
+      color: var(--ion-color-app-green-darker);
+    }
+  }
+}
+
+ion-content {
+  --offset-bottom: auto!important;
+  --overflow: hidden;
+  overflow: auto;
+  &::-webkit-scrollbar {
+    display: none;
+  }
+  width: 100%;
+  height: 100%;
+  background-color: var(--ion-color-app-white);
+}
+.container{
+  padding-left: 12px;
+  padding-right: 12px;
+  width: 100%;
+  height: 100%;
+}
+form{
+  padding-left: 12px;
+  padding-right: 12px;
+  ion-col{
+    padding: 0;
+  }
+}
+
+ion-input {
   font-size: 12px;
-  line-height: 15px;
-  color:#B3BAB3;
+  ::placeholder{
+    color: var(--ion-color-app-gray-light)
+  }
 }
 
-#labelLogin{
-margin-left: 12px;
-font-family: 'Montserrat';
-font-style: normal;
-font-weight: 700;
-font-size: 24px;
-line-height: 29px;
-color: #237A73;
-}
-
-.rh-back-btn{
-  margin: 0 auto;
-  left: 70px;
-  margin-top:35px;
-  margin-bottom:10px;
-  position: relative;
-}
-
-#labelRegis{
-  margin-left: 12px;
-font-family: 'Montserrat';
-font-style: normal;
-font-weight: 700;
-font-size: 24px;
-line-height: 29px;
-color: #237A73;
+#labelLogin {
+  font-family: "Montserrat Bold";
+  font-size: 24px;
+  color: var(--ion-color-app-green-darker);
 }
 
 #name_display{
-
   width: 100%;
-  border-radius: 20px;
-  background-color: #E0E9E0;
-  text-align: left;
-  height: 52px;
-  margin-top: 10px;
-  margin-bottom: 0px ;
-  padding-left: 12px;
+  border-radius: 24px;
+  background-color: var(--ion-color-app-primary);
+  height: 48px;
+  padding-left: 8px;
   padding-right:12px;
-}
-
-#div_btnSendcode{
-  margin-top: 90px;
-  width: 100%;
-  position: relative;
-  height: 52px;
-  background: #B2D1CE;
-  border-radius: 30px;
-  top: 5px;
-}
-#div_btnSubmit{
-  margin-bottom: 24px;
-  margin-top: 170px;
-  width: 100%;
-  position: relative;
-  height: 52px;
-  background: #B2D1CE;
-  border-radius: 30px;
-  top: 5px;
+  padding-top: 5px;
+  margin-top: 8px;
 }
 
 #btn_Submit{
   width: 100%;
-  font-size:smaller;
-  text-align:center;
-  position:relative;
-  top:4px;
-  color:#FFFF;
-}
-
-#register-header{
-  width: 100%;
-  position: relative;
-
-  #rh-back-btn{
-    position: absolute;
-    top: 7px;
-    left: 12px;
-  }
-  #rh-logo{
-
-  }
-}
-
-#contract{
-  text-align: justify; /* For Edge */
-  -moz-text-align-last: center; /* For Firefox prior 58.0 */
-  text-align-last: center;
+  height: 48px;
+  border-radius: 24px;
+  background-color: var(--ion-color-app-green-light);
+  font-size: 12px;
+  text-align: center;
+  color: white;
 }
 
 .center{
@@ -106,4 +86,39 @@ color: #237A73;
   margin-left: auto;
   margin-right: auto;
   width: 50%;
+}
+
+.warring-input{
+  font-size: 12px;
+  color: var(--ion-color-app-orange-dark);
+  padding-top: 4px;
+  position: relative;
+  padding-left:24px;
+  ion-icon{
+    position: absolute;
+    top: 5px;
+    left:8px;
+  }
+}
+
+#app-logo{
+  padding-top: 52px;
+  padding-bottom: 52px;
+}
+#emr-title{
+  font-size: 12px;
+  color: var(--ion-color-app-green-darker);
+}
+#text-guide{
+  font-size: 12px;
+  color: var(--ion-color-app-green-darker);
+  text-align: center;
+  display: block;
+  margin-bottom: 8px;
+}
+#to-footer{
+  padding-left: 12px;
+  padding-right: 12px;
+  padding-bottom: 12px;
+  background-color: var(--ion-color-app-white);
 }
