--- a/src/app/pages/register-page/register-final/register-final.page.scss
+++ b/src/app/pages/register-page/register-final/register-final.page.scss
@@ -1,103 +1,89 @@
-ion-input {
-  // border-radius: 20px;
-  // background-color: #E0E9E0;
-  // text-align: left;
-  height: 42px;
-  font-family: "Montserrat";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 15px;
-  color: #b3bab3;
+ion-header::after {
+  background-image: none;
 }
-
-#labelLogin {
-  margin-left: 12px;
-  font-family: "Montserrat";
-  font-style: normal;
-  font-weight: 700;
-  font-size: 24px;
-  line-height: 29px;
-  color: #237a73;
+ion-header {
+  ion-toolbar {
+    position: relative;
+    width: 100%;
+    padding-bottom: 8px;
+    #tb-back {
+      position: absolute;
+      top: 20px;
+      left: 12px;
+      z-index: 1;
+    }
+    ion-title {
+      padding-top: 8px;
+      padding-left: 60px;
+      font-size: 20px;
+      font-family: "Montserrat Bold";
+      color: var(--ion-color-app-green-darker);
+    }
+  }
 }
-
-.rh-back-btn {
-  margin: 0 auto;
-  left: 70px;
-  margin-top: 35px;
-  margin-bottom: 10px;
-  position: relative;
-}
-
-#labelRegis {
-  margin-left: 12px;
-  font-family: "Montserrat";
-  font-style: normal;
-  font-weight: 700;
-  font-size: 24px;
-  line-height: 29px;
-  color: #237a73;
-}
-
-#name_display {
+ion-content {
+  --offset-bottom: auto!important;
+  --overflow: hidden;
+  overflow: auto;
+  &::-webkit-scrollbar {
+    display: none;
+  }
   width: 100%;
-  margin-top: 37px;
-  border-radius: 20px;
-  background-color: #e0e9e0;
-  text-align: left;
-  height: 52px;
-  margin-bottom: 0px;
+  height: 100%;
+  background-color: var(--ion-color-app-white);
+  text-align: center;
+  font-size: 12px;
+}
+form{
   padding-left: 12px;
   padding-right: 12px;
 }
-
-#div_btnSubmit {
-  margin-bottom: 24px;
-  width: 100%;
-  position: relative;
-  height: 52px;
-  background: #b2d1ce;
-  border-radius: 30px;
-  top: 5px;
-}
-
-#btn_Submit {
-  width: 100%;
-  font-size: smaller;
-  text-align: center;
-  position: relative;
-  top: 4px;
-  color: #ffff;
-}
-
-#register-header {
-  width: 100%;
-  position: relative;
-
-  #rh-back-btn {
-    position: absolute;
-    top: 7px;
-    left: 12px;
-  }
-  #rh-logo {
+ion-input {
+  font-size: 12px;
+  ::placeholder{
+    color: var(--ion-color-app-gray-light)
   }
 }
-
-#contract {
-  text-align: justify; /* For Edge */
-  -moz-text-align-last: center; /* For Firefox prior 58.0 */
-  text-align-last: center;
+a{
+  color: var(--ion-color-app-green-darker);
+  font-family: "Montserrat Bold";
+}
+#chose-avatar{
+  display: block;
+  padding-top: 24px;
 }
 
 .center {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  // width: 50%;
   width: 128px;
   height: 128px;
 }
-
-#footer{
-  
+button{
+  width: 100%;
+  height: 48px;
+  background-color: var(--ion-color-app-green-dark);
+  border-radius: 24px;
+  color: var(--ion-color-app-white);
+  margin-bottom: 8px;
+}
+ion-avatar{
+  img{
+    width: 128px;
+    height: 128px;
+    object-fit: cover;
+  }
+}
+.input-container{
+  width: 100%;
+  height: 48px;
+  background-color: var(--ion-color-app-primary);
+  border-radius: 24px;
+  padding-left: 12px;
+  padding-right: 12px;
+  padding-top: 6px;
+  text-align: left;
+  margin-top: 24px;
+  margin-bottom: 8px;
 }
