--- a/src/app/pages/register-page/register/register.page.scss
+++ b/src/app/pages/register-page/register/register.page.scss
@@ -1,76 +1,57 @@
-ion-input{
-  // border-radius: 20px;
-  // background-color: #E0E9E0;
-  // text-align: left;
-  height: 42px;
-  font-family: 'Montserrat';
-  font-style: normal;
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 15px;
-  color:#B3BAB3;
+ion-header::after {
+  background-image: none;
 }
-.padding-lr12px{
+ion-header {
+  ion-toolbar {
+    position: relative;
+    width: 100%;
+    padding-bottom: 8px;
+    #tb-back {
+      position: absolute;
+      top: 20px;
+      left: 12px;
+      z-index: 1;
+    }
+  }
+}
+ion-content {
+  --offset-bottom: auto!important;
+  --overflow: hidden;
+  overflow: auto;
+  &::-webkit-scrollbar {
+    display: none;
+  }
+  width: 100%;
+  height: 100%;
+  background-color: var(--ion-color-app-white);
+}
+form{
   padding-left: 12px;
-  padding-right:12px;
+  padding-right: 12px;
 }
-#labelLogin{
-margin-left: 12px;
-
-font-family: 'Montserrat';
-font-style: normal;
-font-weight: 700;
-font-size: 24px;
-line-height: 29px;
-color: #237A73;
+ion-input {
+  font-size: 12px;
+  ::placeholder{
+    color: var(--ion-color-app-gray-light)
+  }
 }
-
-
-
 #labelRegis{
-  margin-left: 12px;
-font-family: 'Montserrat';
-font-style: normal;
-font-weight: 700;
-font-size: 24px;
-line-height: 29px;
-color: #237A73;
+  font-family: 'Montserrat Bold';
+  font-size: 24px;
+  color: var(--ion-color-app-green-darker);
+  display: block;
+  padding-top: 12px;
+  padding-bottom: 12px;
 }
-
-#email_input{
+.input-container{
   width: 100%;
-  margin-top: 12px;
-  border-radius: 20px;
-  background-color: #E0E9E0;
-  text-align: left;
-  height: 52px;
-}
-
-#mssv_input{
-  width: 100%;
-  margin-top: 12px;
-  border-radius: 20px;
-  background-color: #E0E9E0;
-  text-align: left;
-  height: 52px;
-}
-
-#password_input{
-  width: 100%;
-  margin-top: 12px;
-  border-radius: 20px;
-  background-color: #E0E9E0;
-  text-align: left;
-  height: 52px;
-}
-
-#exact_password_input{
-  width: 100%;
-  margin-top: 12px;
-  border-radius: 20px;
-  background-color: #E0E9E0;
-  text-align: left;
-  height: 52px;
+  height: 48px;
+  background-color: var(--ion-color-app-primary);
+  border-radius: 24px;
+  padding-left: 12px;
+  padding-right: 12px;
+  padding-top: 8px;
+  margin-bottom: 8px;
 }
 
 #div_btnSubmit{
@@ -85,31 +66,17 @@ color: #237A73;
 
 #btn_Submit{
   width: 100%;
-  font-size:smaller;
+  font-size:12px;
   text-align:center;
-  position:relative;
-  top:4px;
   color:#FFFF;
-}
-
-#register-header{
-  width: 100%;
-  position: relative;
-
-  #rh-back-btn{
-    position: absolute;
-    top: 7px;
-    left: 12px;
-  }
-  #rh-logo{
-
-  }
+  height: 48px;
+  border-radius: 24px;
+  background-color: var(--ion-color-app-green-dark);
 }
 
 #contract{
-  text-align: justify; /* For Edge */
-  -moz-text-align-last: center; /* For Firefox prior 58.0 */
-  text-align-last: center;
+  text-align: center;
+  font-size: 12px;
 }
 
 .center{
@@ -117,6 +84,21 @@ color: #237A73;
   margin-left: auto;
   margin-right: auto;
   width: 50%;
+}
+
+.warring-input{
+  font-size: 12px;
+  color: var(--ion-color-app-orange-dark);
+  position: relative;
+  padding-left:24px;
+  padding-top: 0px;
+  display: block;
+  margin-bottom: 8px;
+  ion-icon{
+    position: absolute;
+    top: 1px;
+    left: 8px;
+  }
 }
 
 
