update search button and fix bug pesonal

--- a/src/app/components/personal/view-profile/view-profile.component.html
+++ b/src/app/components/personal/view-profile/view-profile.component.html
@@ -1,7 +1,7 @@
 <div id="view-profile" [ngStyle] = "ngStyleCViewProfile">
   <div id="container">
     <div id="avatar">
-      <img src="{{imgAvatar}}">
+      <img id="img-avatar" src="{{imgAvatar}}">
       <div id="avatar-option">
         <img src="{{imgOption}}">
       </div>
