--- a/src/app/pages/follow/follow.page.html
+++ b/src/app/pages/follow/follow.page.html
@@ -1,11 +1,4 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>Đang theo dõi</ion-title>
-    <div id="follow-bar-search-btn">
-      <img src="../../../assets/icon/main/search.png">
-    </div>
-  </ion-toolbar>
-</ion-header>
+<app-header-page pageTitle="Đang theo dõi"></app-header-page>
 
 <ion-content>
   <div class="container">
