--- a/src/app/pages/sub-pages/personal-detail/personal-detail.page.scss
+++ b/src/app/pages/sub-pages/personal-detail/personal-detail.page.scss
@@ -52,6 +52,7 @@ ion-header::after {
                     width: 48px;
                     height: 48px;
                     object-fit: fill;
+                    border-radius: 24px;
                 }
                 #avatar-content{
                     padding-top: 12px;
