--- a/src/app/components/personal/view-profile/view-profile.component.scss
+++ b/src/app/components/personal/view-profile/view-profile.component.scss
@@ -5,20 +5,19 @@
   #container {
     height: 100%;
     position: relative;
-    padding-top: 32%;
+    padding-top: 24%;
     #avatar {
       width: 84px;
       height: 84px;
       top: 0%;
       left: 50%;
-      -ms-transform: translateY(-50%);
-      transform: translateY(-50%);
       -ms-transform: translateX(-50%);
       transform: translateX(-50%);
       position: relative;
       img {
         width: 100%;
         height: 100%;
+        border-radius: 42px;
       }
       #avatar-option {
         width: 24px;
@@ -45,6 +44,7 @@
       }
       #content-content {
         font-size: 12px;
+        display: block;
         color: white;
       }
     }
