--- a/src/app/components/to-create-post/to-create-post.component.scss
+++ b/src/app/components/to-create-post/to-create-post.component.scss
@@ -30,6 +30,11 @@
             position: absolute;
             top: 4px;
             left: 0px;
+            img{
+                width: 40px;
+                height: 40px;
+                border-radius: 20px;
+            }
         }
     }
 }
