--- a/src/app/pages/group/group.page.html
+++ b/src/app/pages/group/group.page.html
@@ -1,11 +1,4 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>{{groupName}}</ion-title>
-    <div id="group-bar-search-btn">
-      <img src="../../../assets/icon/main/search.png">
-    </div>
-  </ion-toolbar>
-</ion-header>
+<app-header-page pageTitle="{{groupName}}"></app-header-page>
 
 <ion-content>
   <div class="container">
