--- a/src/app/pages/notification/notification.page.html
+++ b/src/app/pages/notification/notification.page.html
@@ -1,11 +1,4 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>Thông báo</ion-title>
-    <div id="notifcation-bar-search-btn">
-      <img src="../../../assets/icon/main/search.png">
-    </div>
-  </ion-toolbar>
-</ion-header>
+<app-header-page pageTitle="Thông báo"></app-header-page>
 
 <ion-content>
   <div class="nt-container">
