--- a/src/app/pages/personal/personal.page.html
+++ b/src/app/pages/personal/personal.page.html
@@ -1,42 +1,23 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>Trang cá nhân</ion-title>
-    <div id="personal-bar-search-btn">
-      <img src="../../../assets/icon/main/search.png" />
-    </div>
-  </ion-toolbar>
-</ion-header>
+<app-header-page pageTitle="Trang cá nhân"></app-header-page>
 
 <ion-content>
   <div class="container">
     <div id="view-profile">
-      <app-view-profile
-        title="{{title}}"
-        content="{{content}}"
-        imgBackground="{{imgBackground}}"
-        imgAvatar="{{imgAvatar}}"
-      ></app-view-profile>
+      <app-view-profile title="{{title}}" content="{{content}}" imgBackground="{{imgBackground}}"
+        imgAvatar="{{imgAvatar}}"></app-view-profile>
     </div>
     <div id="content">
       <div id="ct-posts">
         <div class="content-title" id="ct-tt-posts">Bài viết</div>
         <div id="ct-post-content" (click)="onViewYourPost()">
-          <app-setting-item
-            title="Xem các bài viết của bạn"
-            option="0"
-          ></app-setting-item>
+          <app-setting-item title="Xem các bài viết của bạn" option="0"></app-setting-item>
         </div>
       </div>
       <div id="ct-follows">
         <div class="content-title">Theo dõi</div>
         <div id="ct-follows-content">
-          <ion-slides
-            [options]="{ slidesPerView: 'auto', zoom: false, grabCursor: true }"
-          >
-            <ion-slide
-              id="ct-follows-slide"
-              *ngFor="let card of [0,1,2,3,4,5,6]"
-            >
+          <ion-slides [options]="{ slidesPerView: 'auto', zoom: false, grabCursor: true }">
+            <ion-slide id="ct-follows-slide" *ngFor="let card of [0,1,2,3,4,5,6]">
               <ion-col>
                 <app-short-view-object color="{{card}}"></app-short-view-object>
               </ion-col>
@@ -47,19 +28,11 @@
               </div>
             </ion-slide>
           </ion-slides>
-          <ion-slides
-            [options]="{ slidesPerView: 'auto', zoom: false, grabCursor: true }"
-          >
-            <ion-slide
-              id="ct-follows-slide"
-              *ngFor="let card of [0,1,2,3,4,5,6]"
-            >
+          <ion-slides [options]="{ slidesPerView: 'auto', zoom: false, grabCursor: true }">
+            <ion-slide id="ct-follows-slide" *ngFor="let card of [0,1,2,3,4,5,6]">
               <ion-col>
-                <app-short-view-object
-                  option="student"
-                  imgAvatar="../../../../assets/icon/default/default-avatar.png"
-                  color="{{card}}"
-                ></app-short-view-object>
+                <app-short-view-object option="student" imgAvatar="../../../../assets/icon/default/default-avatar.png"
+                  color="{{card}}"></app-short-view-object>
               </ion-col>
             </ion-slide>
             <ion-slide class="ct-fl-btn-more" (click)="gotoFollowPage()">
@@ -73,40 +46,21 @@
       <div id="ct-acc-settings">
         <div class="content-title">Cài đặt tài khoản</div>
         <div id="ct-acc-settings-content">
-          <app-setting-item
-            title="Thay đổi thông tin"
-            content="Ảnh đại diện và thông tin liên quan ..."
-            option="1"
-          ></app-setting-item>
-          <app-setting-item
-            title="Thay đổi bảo mật"
-            content="Thay đổi mật khẩu"
-            option="2"
-          ></app-setting-item>
+          <app-setting-item title="Thay đổi thông tin" content="Ảnh đại diện và thông tin liên quan ..." option="1">
+          </app-setting-item>
+          <app-setting-item title="Thay đổi bảo mật" content="Thay đổi mật khẩu" option="2"></app-setting-item>
         </div>
       </div>
       <div id="ct-app-settings">
         <div class="content-title">Cài đặt ứng dụng</div>
         <div id="ct-app-settings-content">
-          <app-setting-item
-            title="Thông báo"
-            content="Ẩn/hiện thông báo"
-            option="3"
-          ></app-setting-item>
-          <app-setting-item
-            title="Giao diện"
-            content="Dark/light mode"
-            option="4"
-          ></app-setting-item>
+          <app-setting-item title="Thông báo" content="Ẩn/hiện thông báo" option="3"></app-setting-item>
+          <app-setting-item title="Giao diện" content="Dark/light mode" option="4"></app-setting-item>
         </div>
       </div>
       <div id="ct-app-logout">
-        <app-setting-item
-          title="Đăng Xuất"
-          content="Đăng xuất tài khoản"
-          option="-1"
-          (click)="logout()"
-        ></app-setting-item>
+        <app-setting-item title="Đăng Xuất" content="Đăng xuất tài khoản" option="-1" (click)="logout()">
+        </app-setting-item>
       </div>
     </div>
   </div>
