--- a/src/app/pages/personal/personal.page.html
+++ b/src/app/pages/personal/personal.page.html
@@ -49,6 +49,7 @@
           <app-setting-item title="Thay đổi thông tin" content="Ảnh đại diện và thông tin liên quan ..." option="1">
           </app-setting-item>
           <app-setting-item title="Thay đổi bảo mật" content="Thay đổi mật khẩu" option="2"></app-setting-item>
+          <app-setting-item title="Nhận diện khuôn mặt" content="Thiết lập nhận diện bằng khuôn mặt" option="5" (click)="faceRecognition()"></app-setting-item>
         </div>
       </div>
       <div id="ct-app-settings">
