--- a/src/app/pages/face-recognition/face-recognition-page/face-recognition-page.page.scss
+++ b/src/app/pages/face-recognition/face-recognition-page/face-recognition-page.page.scss
@@ -30,8 +30,9 @@ ion-content {
         }
       }
       #title-guide {
+        width: 100%;
         padding-left: 12px;
-        padding-right: 28%;
+        padding-right: 12px;
         font-size: 12px;
         :first-child {
           font-size: 24px;
@@ -40,8 +41,95 @@ ion-content {
         }
         span {
           display: block;
+          padding-bottom: 12px;
+          padding-right: 12px;
           color: var(--ion-color-app-white);
         }
+      }
+    }
+    #guide-content{
+      display: none;
+      #guide-text{
+        text-align: center;
+        span{
+          font-family: 'Montserrat';
+          font-size: 12px;
+          color: var(--ion-color-app-white);
+        }
+      }
+      #countdown {
+        position: relative;
+        margin: auto;
+        margin-top: 100px;
+        height: 40px;
+        width: 40px;
+        text-align: center;
+      }
+      
+      #countdown-number {
+        color: white;
+        display: inline-block;
+        line-height: 40px;
+      }
+      
+      svg {
+        position: absolute;
+        top: 0;
+        right: 0;
+        width: 40px;
+        height: 40px;
+        transform: rotateY(-180deg) rotateZ(-90deg);
+      }
+      
+      svg circle {
+        stroke-dasharray: 113px;
+        stroke-dashoffset: 0px;
+        stroke-linecap: round;
+        stroke-width: 2px;
+        stroke: white;
+        fill: none;
+        animation: countdown 5s linear infinite forwards;
+      }
+      
+      @keyframes countdown {
+        from {
+          stroke-dashoffset: 0px;
+        }
+        to {
+          stroke-dashoffset: 113px;
+        }
+      }
+    }
+    #get-face-done{
+      margin-left: 10%;
+      margin-top: 24%;
+      display: none;
+      justify-content: center;
+      padding-left: 12px;
+      padding-right: 12px;
+      flex-wrap: wrap;
+      padding-top: 12px;
+      padding-bottom: 12px;
+      width: 80%;
+      max-height:200px;
+      border-radius: 12px;
+      background-color: var(--ion-color-app-white);
+      img{
+        width: 120px;
+        height: 120px;
+        object-fit: cover;
+      }
+      button{
+        width: 100%;
+        height: 48px;
+        border-radius: 24px;
+        background-color: var(--ion-color-app-orange-dark);
+        color: var(--ion-color-app-white);
+        font-family: 'Montserrat';
+        font-size: 12px;
+        text-align: center;
+        flex-basis: 100%;
+        margin-top: 12px;
       }
     }
     #cameraPreview{
