--- a/src/app/pages/login/login.page.scss
+++ b/src/app/pages/login/login.page.scss
@@ -51,6 +51,20 @@ ion-input {
   padding-left: 4px;
   padding-right: 12px;
 }
+#advanceLogin{
+  position: relative;
+  #btn-face-id{
+    z-index: 1;
+    width: 40px;
+    height: 40px;
+    background-color: var(--ion-color-app-green-darker);
+    border-radius: 24px;
+    padding: 8px;
+    position: absolute;
+    top: 16px;
+    right: 4px;
+  }
+}
 
 #btn_login {
   width: 100%;
